Fix progress circle stretched in iOS

--- a/src/styles/_summary.scss
+++ b/src/styles/_summary.scss
@@ -400,8 +400,10 @@
     border: 6px solid #F4F4F4;
     box-shadow: 0 0 0 4px rgba(228,228,237,0.5);
     margin-left: auto;
+    position: relative;
 
     & canvas {
+      position: absolute;
       max-width: 100%;
       max-height: 100%;
     }
